Massive javascript optimization (hope this doesnt break)

--- a/public/index.html
+++ b/public/index.html
@@ -76,6 +76,9 @@
         <div class="content" id="top-players">
             Placeholder Placeholder Placeholder Placeholder Placeholder Placeholder Placeholder
         </div>
+        <div class="content" id="top-players" aria-hidden="true">
+            Placeholder Placeholder Placeholder Placeholder Placeholder Placeholder Placeholder
+        </div>
     </section>
     <section class="carousel-container">
         <div class="carousel">
