--- a/public/mys-list.html
+++ b/public/mys-list.html
@@ -93,109 +93,7 @@
     </script>
     <script defer src="/_vercel/insights/script.js"></script>
     <script src="script/traffic.js"></script>
-    <script>
-        document.addEventListener("DOMContentLoaded", () => {
-            const cards = document.querySelectorAll(".card");
-
-            const setCardOpacity = () => {
-                cards.forEach(card => {
-                    const rect = card.getBoundingClientRect();
-                    const windowHeight = window.innerHeight;
-
-                    // Check if the card is in the viewport
-                    if (rect.top < windowHeight && rect.bottom >= 0) {
-                        card.style.opacity = 1;
-                    } else {
-                        card.style.opacity = 0;
-                    }
-                });
-            };
-
-            window.addEventListener('scroll', setCardOpacity);
-            setCardOpacity(); // Initial call to set the opacity on page load
-        });
-
-        const appRoot = document.documentElement;
-        const nav = document.querySelector(".lists");
-        const root = document.documentElement;
-        const loader = document.querySelector(".loader");
-        const mainDiv = document.querySelector(".main");
-        const legacyDiv = document.querySelector(".legacy");
-        const typeList = document.getElementById("type-list");
-
-        const endTransition = () => {
-            loader.addEventListener("transitionend", () => {
-                loader.style.transform = "translateX(100%)";
-                root.classList.remove("disable-hover");
-            });
-            loader.style.transform = "";
-        };
-
-        function toggleDropdown() {
-            const dropdownContent = document.getElementById("dropdownContent");
-            dropdownContent.classList.toggle("show");
-        }
-
-        const startTransition = () => {
-            loader.style.transform = "translateX(100%)";
-            appRoot.dataset.route = "a";
-            mainDiv.style.display = "flex";
-            legacyDiv.style.display = "none";
-            typeList.style.opacity = "1";
-        };
-
-        nav.addEventListener("click", (e) => {
-            if (e.target.closest("a")) {
-                let a = nav.querySelector(".active");
-                root.classList.add("disable-hover");
-                if (a) {
-                    a.classList.remove("active");
-                }
-                e.target.closest("a").classList.add("active");
-                e.preventDefault();
-            }
-        });
-
-        const onRouteClick = (route) => {
-            if (appRoot.dataset.route === route) return;
-            appRoot.dataset.route = route;
-            typeList.style.opacity = "0"; // Start fading out
-
-            if (route === "a") {
-                legacyDiv.style.opacity = "0"; // Start fading out legacy
-                setTimeout(() => {
-                    legacyDiv.style.display = "none";
-                    mainDiv.style.display = "flex";
-                    mainDiv.style.opacity = "1"; // Fade in main
-                    typeList.textContent = "MAIN LIST";
-                    typeList.style.opacity = "1"; // Fade in type-list
-                }, 500);
-            } else if (route === "b") {
-                mainDiv.style.opacity = "0"; // Start fading out main
-                setTimeout(() => {
-                    mainDiv.style.display = "none";
-                    legacyDiv.style.display = "flex";
-                    legacyDiv.style.opacity = "1"; // Fade in legacy
-                    typeList.textContent = "LEGACY LIST";
-                    typeList.style.opacity = "1"; // Fade in type-list
-                }, 500);
-            }
-
-            endTransition();
-        };
-
-        window.addEventListener("load", () => {
-            startTransition();
-            legacyDiv.style.opacity = "0"; // Start fading out legacy
-            setTimeout(() => {
-                legacyDiv.style.display = "none";
-                mainDiv.style.display = "flex";
-                mainDiv.style.opacity = "1"; // Fade in main
-                typeList.textContent = "MAIN LIST";
-                typeList.style.opacity = "1"; // Fade in type-list
-            }, 500);
-        });
-    </script>
+    <script src="script/list-type.js"></script>
     <footer>
         <p>© Copyright 2024-2024 Elite Indonesian Obbyist</p>
         <br>
