front-end changes

--- a/public/index.html
+++ b/public/index.html
@@ -60,6 +60,7 @@
     <div class="top-block"></div>
     <section class="information">
         <div id="particles"></div>
+        <div id="bg-grid"></div>
         <h1>The Obbyist List</h1>
         <h2>The hardest obbies listed in each country</h2>
         <p>you can submit obbies here</span> or from our discord server. invite link is in top right.</p>
