minor front-end and an attempt to fix marquee effect on home

--- a/public/index.html
+++ b/public/index.html
@@ -75,10 +75,7 @@
     </section>
     <section class="marquee">
         <div class="content" id="top-players">
-            Placeholder Placeholder Placeholder Placeholder Placeholder Placeholder Placeholder
-        </div>
-        <div class="content" id="top-players" aria-hidden="true">
-            Placeholder Placeholder Placeholder Placeholder Placeholder Placeholder Placeholder
+            ITSMYCRAFTED IS THE GOAT
         </div>
     </section>
     <section class="carousel-container">
