--- a/public/eio-list.html
+++ b/public/eio-list.html
@@ -48,7 +48,7 @@
                     </div>
                 </div>
                 <div class="nav">
-                    <a href="statistics" target="_blank">
+                    <a href="statistics">
                         <img src="assets/stats.svg" class="flag-icon" />
                         <h3 class="nav-title">Player Stats</h3>
                     </a>
