--- a/public/rgDx3q1Xoo3iNLE.html
+++ b/public/rgDx3q1Xoo3iNLE.html
@@ -70,37 +70,7 @@
     </script>
     <script defer src="/_vercel/insights/script.js"></script>
     <script src="script/traffic.js"></script>
-    <script>
-        function toggleDropdown() {
-            const dropdownContent = document.getElementById("dropdownContent");
-            dropdownContent.classList.toggle("show");
-        }
-
-        const loader = document.querySelector(".loader");
-
-        const startTransition = () => {
-            loader.style.transform = "translateX(100%)";
-        };
-
-        window.addEventListener("load", () => {
-            startTransition();
-        });
-    </script>
-    <script>
-        function loadHTML(file, elementId) {
-            fetch(file)
-                .then(response => response.text())
-                .then(html => {
-                    document.getElementById(elementId).innerHTML = html;
-                })
-                .catch(err => console.error(`Error loading ${file}:`, err));
-        }
-    
-        document.addEventListener("DOMContentLoaded", () => {
-            loadHTML("layout/header.html", "header-container");
-            loadHTML("layout/footer.html", "footer-container");
-        });
-    </script>
+    <script src="script/loader.js"></script>
     <div id="footer-container"></div>
 </body>
 </html>
