added dropdown js, editor front end changes, changed statslist from div to ul li

--- a/public/statistics.html
+++ b/public/statistics.html
@@ -60,8 +60,8 @@
         <div class="stats-viewer">
             <div class="player-list">
                 <input type="text" placeholder="Enter to search..." />
-                <div class="scrollable" id="scrollable">
-                </div>
+                <ul class="scrollable" id="scrollable">
+                </ul>
             </div>
             <div class="player-stats">
             </div>
@@ -184,22 +184,7 @@
     </script>
     <script defer src="/_vercel/insights/script.js"></script>
     <script src="script/traffic.js"></script>
-    <script>
-        function toggleDropdown() {
-            const dropdownContent = document.getElementById("dropdownContent");
-            dropdownContent.classList.toggle("show");
-        }
-
-        const loader = document.querySelector(".loader");
-
-        const startTransition = () => {
-            loader.style.transform = "translateX(100%)";
-        };
-
-        window.addEventListener("load", () => {
-            startTransition();
-        });
-    </script>
+    <script src="script/dropdown.js"></script>
     <footer>
         <p>© Copyright 2024-2024 Elite Indonesian Obbyist</p>
         <br>
