--- a/public/P3mGJrgup1Jg86g.html
+++ b/public/P3mGJrgup1Jg86g.html
@@ -127,22 +127,7 @@
     </script>
     <script defer src="/_vercel/insights/script.js"></script>
     <script src="script/traffic.js"></script>
-    <script>
-        function toggleDropdown() {
-            const dropdownContent = document.getElementById("dropdownContent");
-            dropdownContent.classList.toggle("show");
-        }
-
-        const loader = document.querySelector(".loader");
-
-        const startTransition = () => {
-            loader.style.transform = "translateX(100%)";
-        };
-
-        window.addEventListener("load", () => {
-            startTransition();
-        });
-    </script>
+    <script src="script/dropdown.js"></script>
     <footer>
         <p>© Copyright 2024-2024 Elite Indonesian Obbyist</p>
         <br>
