--- a/public/f2R8mMrRhPjGOAf.html
+++ b/public/f2R8mMrRhPjGOAf.html
@@ -92,6 +92,7 @@
     <script defer src="/_vercel/insights/script.js"></script>
     <script src="script/traffic.js"></script>
     <script src="script/loader.js"></script>
+    <script src="script/dropdown.js"></script>
     <div id="footer-container"></div>
 </body>
 
