--- a/public/statistics.html
+++ b/public/statistics.html
@@ -174,6 +174,16 @@
                     alert('An error occurred while submitting the form.');
                 });
         }
+
+        const loader = document.getElementsByClassName("loader")[0];
+
+    const startTransition = () => {
+        loader.style.transform = "translateX(100%)";
+    };
+
+    window.addEventListener("load", () => {
+        startTransition();
+    });
     </script>
     <script>
         window.si = window.si || function () { (window.siq = window.siq || []).push(arguments); };
