--- a/public/f2R8mMrRhPjGOAf.html
+++ b/public/f2R8mMrRhPjGOAf.html
@@ -40,7 +40,9 @@
                         <input type="text" id="region" name="region" placeholder="E.G : ID"><br>
         
                         <label for="beaten">Beaten:</label>
-                        <input type="text" id="beaten" name="beaten" placeholder="E.G : Honor"><br>
+                        <div id="beaten-container">
+                            <input type="text" id="beaten" name="beaten" placeholder="E.G : Honor"><br>
+                        </div>
                     </form>
                     <button id="add-beaten-btn">+</button>
                 </div>
