an attempt for better marquee

--- a/public/index.html
+++ b/public/index.html
@@ -74,8 +74,8 @@
         </div>
     </section>
     <section class="marquee">
-        <div class="content" id="top-players">
-            ITSMYCRAFTED IS THE GOAT
+        <div class="marquee-inner" id="top-players-container">
+            <!-- TOP PLAYERS HERE OMAGA OMAGA -->
         </div>
     </section>
     <section class="carousel-container">
