--- a/public/CUmENgiZiU1ZiFGm4lik.html
+++ b/public/CUmENgiZiU1ZiFGm4lik.html
@@ -71,6 +71,7 @@
     <script src="script/traffic.js"></script>
     <script src="script/loader.js"></script>
     <script src="script/dropdown.js"></script>
+    <script src="script/animation.js"></script>
     <div id="footer-container"></div>
 </body>
 </html>
