anims and pending overwriting

--- a/public/account.html
+++ b/public/account.html
@@ -112,7 +112,7 @@
         </div>
     </div>
 </div>
-    <script class="account-script">
+    <script>
         const loginTab = document.getElementById('login-tab');
         const registerTab = document.getElementById('register-tab');
         const loginForm = document.getElementById('login-form');
@@ -148,7 +148,7 @@
 
     if (response.ok) {
         checkmark('Logged in!')
-        // Do something with user data
+        
     } else {
         fail('Login Failed!')
     }
