--- a/public/f2R8mMrRhPjGOAf.html
+++ b/public/f2R8mMrRhPjGOAf.html
@@ -55,52 +55,6 @@
         </div>
     </section>
     <script src="stat-editor.js"></script>
-    <!-- <script>
-        const prefix = 'playerstat';
-        const listBlobsApiUrl = '/api/listBlobs';
-        let blobUrl = '';
-        let originalData = '';
-        fetch(listBlobsApiUrl)
-        .then(response => response.json())
-        .then(data => {
-            const files = data.blobs || [];
-            const matchedFile = files.find(file => file.pathname && file.pathname.startsWith(prefix));
-            if (matchedFile) {
-                blobUrl = matchedFile.url;
-                fetch(blobUrl)
-                    .then(response => response.json())
-                    .then(data => {
-                        originalData = JSON.stringify(data, null, 2);
-                        document.getElementById('json-editor').value = originalData;
-                    })
-                    .catch(error => console.error('Error fetching JSON:', error));
-            } else {
-                console.error('No file found with the specified prefix.');
-            }
-        })
-        .catch(error => console.error('Error fetching files:', error));
-        document.getElementById('save-btn').addEventListener('click', () => {
-            const updatedData = document.getElementById('json-editor').value;
-            fetch('/api/saveJson', {
-                    method: 'PUT',
-                    headers: {
-                        'Content-Type': 'application/json',
-                    },
-                    body: JSON.stringify({ blobUrl, prefix, updatedData }),
-                })
-                .then(response => response.json())
-                .then(result => {
-                    console.log('Update successful:', result);
-                    alert('Update successful!');
-                    sleep(2000);
-                    window.location.reload();
-                })
-                .catch(error => console.error('Error updating JSON:', error));
-        });
-        document.getElementById('cancel-btn').addEventListener('click', () => {
-            document.getElementById('json-editor').value = originalData;
-        });
-    </script> -->
     <script>
         window.si = window.si || function () {
             (window.siq = window.siq || []).push(arguments);
@@ -116,6 +70,7 @@
     <script src="script/traffic.js"></script>
     <script src="script/loader.js"></script>
     <script src="script/dropdown.js"></script>
+    <script src="script/animation.js"></script>
     <div id="footer-container"></div>
 </body>
 
