--- a/public/rgDx3q1Xoo3iNLE.html
+++ b/public/rgDx3q1Xoo3iNLE.html
@@ -72,6 +72,7 @@
     <script src="script/traffic.js"></script>
     <script src="script/loader.js"></script>
     <script src="script/dropdown.js"></script>
+    <script src="script/animation.js"></script>
     <div id="footer-container"></div>
 </body>
 </html>
