--- a/public/zXZSXdFIBVsC1Fn.html
+++ b/public/zXZSXdFIBVsC1Fn.html
@@ -72,6 +72,7 @@
     <script src="script/traffic.js"></script>
     <script src="script/loader.js"></script>
     <script src="script/dropdown.js"></script>
+    <script src="script/animation.js"></script>
     <div id="footer-container"></div>
 </body>
 </html>
