--- a/public/account.html
+++ b/public/account.html
@@ -111,6 +111,32 @@
             </form>
         </div>
     </div>
+    <div class="account-overlay" id="verification-popup">
+        <div class="account-popup">
+            <div class="account-popup-header">
+                <h3 class="account-popup-title">Verification Required</h3>
+                <button class="account-popup-close" id="close-popup">&times;</button>
+            </div>
+            <div class="account-popup-body">
+                <div class="account-popup-icon">
+                    <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M12 2L1 21h22L12 2zm0 4.6L19.1 19H4.9L12 6.6zm-1 5.4v4h2v-4h-2zm0 6v2h2v-2h-2z"/>
+                    </svg>
+                </div>
+                <p class="account-popup-message">
+                    To complete your registration, join the verification game.
+                    <br><br>
+                    This helps us verify you're a real person and protects our community.
+                </p>
+                <a href="https://www.roblox.com/games/110702083826441/Verification" target="_blank" class="account-popup-button">
+                    Join Verification Game
+                </a>
+            </div>
+            <div class="account-popup-footer">
+                After joining the game, you can login
+            </div>
+        </div>
+    </div>
 </div>
     <script>
         const loginTab = document.getElementById('login-tab');
@@ -170,10 +196,14 @@ document.getElementById('register-form').addEventListener('submit', async functi
     const result = await response.json();
 
     if (response.ok) {
-        alert('Registration successful! You can now log in.');
-        console.log('Registered user:', result.user);
+        document.getElementById('register-success').style.display = 'block';
+                setTimeout(() => {
+                    document.getElementById('register-success').style.display = 'none';
+                    
+                    verificationPopup.classList.add('active');
+                }, 1000);
     } else {
-        alert(result.message);
+        fail(result.message)
     }
 });
 
