verification popup fix

--- a/public/account.html
+++ b/public/account.html
@@ -133,7 +133,7 @@
                 </a>
             </div>
             <div class="account-popup-footer">
-                After joining the game, you can login
+                After joining the game, you can login.
             </div>
         </div>
     </div>
@@ -142,6 +142,7 @@
         const loginTab = document.getElementById('login-tab');
         const registerTab = document.getElementById('register-tab');
         const loginForm = document.getElementById('login-form');
+        const verificationPopup = document.getElementById('verification-popup');
         const registerForm = document.getElementById('register-form');
 
         loginTab.addEventListener('click', () => {
