--- a/public/account.html
+++ b/public/account.html
@@ -142,8 +142,6 @@
     window.addEventListener('DOMContentLoaded', () => {
     const loggedInUser = localStorage.getItem('loggedInUser');
     if (loggedInUser) {
-        alert(`Welcome back, ${loggedInUser}!`);
-
         window.location.href = '/dashboard';
     }
 });
@@ -196,8 +194,10 @@
 
     if (response.ok) {
         checkmark('Logged in!')
-        localStorage.setItem('loggedInUser', username);
-        window.location.href = '/dashboard';
+        setTimeout(() => {
+            localStorage.setItem('loggedInUser', username);
+            window.location.href = '/dashboard';
+                }, 1000);
     } else {
         fail('Login Failed!')
     }
