--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -285,35 +285,64 @@
         
     </script>
     <script>
-const thumbnailCache = {};
 
-async function getThumbnailUrl(placeId) {
+const universeIdCache = {};
+    const thumbnailCache = {};
+
+    async function getUniverseId(placeId) {
+        if (universeIdCache[placeId]) {
+            return universeIdCache[placeId];
+        }
+
+        const response = await fetch(`https://games.roblox.com/v1/games/multiget-place-details?placeIds=${placeId}`);
+        const data = await response.json();
+        const universeId = data[0]?.universeId;
+
+        if (universeId) {
+            universeIdCache[placeId] = universeId;
+            return universeId;
+        } else {
+            throw new Error('Universe ID not found');
+        }
+    }
+
+    async function getThumbnailUrl(placeId) {
     if (thumbnailCache[placeId]) {
+        console.log(`[Frontend] Cache hit for placeId: ${placeId}`);
         return thumbnailCache[placeId];
     }
 
     try {
+        console.log(`[Frontend] Fetching thumbnail for placeId: ${placeId}`);
         const response = await fetch(`/api/thumbnail?placeId=${placeId}`);
+
+        console.log('[Frontend] Response:', response);
+
         const data = await response.json();
+
+        console.log('[Frontend] Response JSON:', data);
+
         const url = data?.imageUrl;
 
         if (url) {
+            console.log(`[Frontend] Thumbnail URL found: ${url}`);
             thumbnailCache[placeId] = url;
             return url;
         } else {
-            throw new Error('Thumbnail URL not found');
+            console.error('[Frontend] Thumbnail URL not found in response');
+            return 'https://via.placeholder.com/512';
         }
     } catch (error) {
-        console.error(error);
-        return 'https://via.placeholder.com/512'; // fallback image
+        console.error('[Frontend] Error fetching thumbnail:', error);
+        return 'https://via.placeholder.com/512';
     }
 }
 
 
-function extractPlaceId(gamelink) {
-    const match = gamelink.match(/games\/(\d+)/);
-    return match ? match[1] : null;
-}
+    function extractPlaceId(gamelink) {
+        const match = gamelink.match(/games\/(\d+)/);
+        return match ? match[1] : null;
+    }
         fetch('/api/listBlobs')
         .then(response => response.json())
         .then(data => {
@@ -346,7 +375,7 @@ function extractPlaceId(gamelink) {
             renderGames(games);
         })
         .catch(error => console.error('Error loading data:', error));
-
+        
         document.getElementById('dashboard-modal-close').addEventListener('click', () => closeModal('dashboard-game-modal-overlay'));
 
         document.getElementById('dashboard-game-modal-overlay').addEventListener('click', (e) => {
