--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -285,27 +285,7 @@
         
     </script>
     <script>
-
-const universeIdCache = {};
     const thumbnailCache = {};
-
-    async function getUniverseId(placeId) {
-        if (universeIdCache[placeId]) {
-            return universeIdCache[placeId];
-        }
-
-        const response = await fetch(`https://games.roblox.com/v1/games/multiget-place-details?placeIds=${placeId}`);
-        const data = await response.json();
-        const universeId = data[0]?.universeId;
-
-        if (universeId) {
-            universeIdCache[placeId] = universeId;
-            return universeId;
-        } else {
-            throw new Error('Universe ID not found');
-        }
-    }
-
     async function getThumbnailUrl(placeId) {
     if (thumbnailCache[placeId]) {
         console.log(`[Frontend] Cache hit for placeId: ${placeId}`);
@@ -315,14 +295,12 @@ const universeIdCache = {};
     try {
         console.log(`[Frontend] Fetching thumbnail for placeId: ${placeId}`);
         const response = await fetch(`/api/thumbnail?placeId=${placeId}`);
-
         console.log('[Frontend] Response:', response);
 
         const data = await response.json();
-
         console.log('[Frontend] Response JSON:', data);
 
-        const url = data?.imageUrl;
+        const url = data?.thumbnails?.[0]?.thumbnails?.[0]?.imageUrl;
 
         if (url) {
             console.log(`[Frontend] Thumbnail URL found: ${url}`);
@@ -338,11 +316,6 @@ const universeIdCache = {};
     }
 }
 
-
-    function extractPlaceId(gamelink) {
-        const match = gamelink.match(/games\/(\d+)/);
-        return match ? match[1] : null;
-    }
         fetch('/api/listBlobs')
         .then(response => response.json())
         .then(data => {
