--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -394,15 +394,15 @@
             modalTier.textContent = game.tier;
             playersList.innerHTML = '';
             
-            if (game.players.length > 0) {
-                game.players.forEach(player => {
-                    const playerItem = document.createElement('div');
-                    playerItem.textContent = player;
-                    playersList.appendChild(playerItem);
-                });
-            } else {
-                playersList.innerHTML = '<div>No players have beaten this obby yet.</div>';
-            }
+            // if (game.players.length > 0) {
+            //     game.players.forEach(player => {
+            //         const playerItem = document.createElement('div');
+            //         playerItem.textContent = player;
+            //         playersList.appendChild(playerItem);
+            //     });
+            // } else {
+            //     playersList.innerHTML = '<div>No players have beaten this obby yet.</div>';
+            // }
             
             modalOverlay.style.display = 'flex';
         }
