--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -383,6 +383,7 @@
         
         // Open the modal and show details
         function openGameModal(game) {
+            console.log('Opening modal for:', game.title);
             const modalOverlay = document.getElementById('dashboard-game-modal-overlay');
             const modalImage = document.getElementById('dashboard-modal-image');
             const modalTitle = document.getElementById('dashboard-modal-title');
