--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -411,7 +411,7 @@
         
         // Close modal
         document.getElementById('dashboard-modal-close').addEventListener('click', () => {
-            document.getElementById('dashboard-game-modal-overlay').style.display = 'none';
+            closeModal('dashboard-game-modal-overlay');
         });
         
         document.getElementById('dashboard-modal-close').addEventListener('click', () => closeModal('dashboard-game-modal-overlay'));
