--- a/public/ukr-list.html
+++ b/public/ukr-list.html
@@ -6,15 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="style.css">
-    <title>Ukraine List</title>
+    <title>Obbylist - Ukraine List</title>
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2277894072143897"
         crossorigin="anonymous"></script>
     <meta name="author" content="bypassing1">
     <meta property="og:title" content="Ukraine List">
     <meta property="og:description" content="Ukraine list, which ranges from top #1 to #50 from all of ukraine.">
-    <meta property="og:url" content="https://bypassing1.github.io/The-Obbyist-List/voc-list.html">
+    <meta property="og:url" content="https://obbylist.vercel.app" />
     <meta property="og:image" id="og-image"
-        content="https://cdn.discordapp.com/attachments/1246327728588849162/1251096242075860992/image.png?ex=666d55ac&is=666c042c&hm=1673e30fb92b931a8db05c2793e8c374acdfc3acea0928abc6aff203b0d87349&">
+        content="https://cdn.discordapp.com/attachments/876171286282383450/1359508004625449051/image.png?ex=67f7bbfe&is=67f66a7e&hm=27af879fddd6b93ffbf632a70e8f4606f2ee96fd9f10d7eb8f8c616fa6a7d732&">
     <meta property="og:type" content="website">
 </head>
 
@@ -27,9 +27,9 @@
             </div>
             <div class="nav-group">
                 <div class="nav" id="home">
-                    <a href="index">
-                        <img src="assets/home.svg" class="flag-icon">
-                        <h3 class="nav-title">Home</h3>
+                    <a href="dashboard">
+                        <img src="assets/dashboard.svg" class="flag-icon">
+                        <h3 class="nav-title">Dashboard</h3>
                     </a>
                 </div>
                 <div class="dropdown">
