--- a/public/CUmENgiZiU1ZiFGm4lik.html
+++ b/public/CUmENgiZiU1ZiFGm4lik.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="style.css">
-    <title>List Editor</title>
+    <title>Obbylist - List Editor</title>
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2277894072143897"
         crossorigin="anonymous"></script>
     <meta name="author" content="bypassing1">
@@ -15,7 +15,7 @@
         content="List editor, self explanatory.">
     <meta property="og:url" content="https://obbylist.vercel.app/">
     <meta property="og:image" id="og-image"
-        content="https://cdn.discordapp.com/attachments/876171286282383450/1312699817213952032/image.png?ex=674d7279&is=674c20f9&hm=87363ea9a0f7a3e4117627dd99cc5919d8e3dad05dd064ded63535c02c5a3f2c&">
+        content="https://cdn.discordapp.com/attachments/876171286282383450/1359508743586320495/image.png?ex=67f7bcae&is=67f66b2e&hm=c3f98fb8af7c7b8e9094b87da1a09502c1e12e5c863f97ca3b9ebb3bb3616b67&">
     <meta property="og:type" content="website">
 </head>
 
