--- a/public/f2R8mMrRhPjGOAf.html
+++ b/public/f2R8mMrRhPjGOAf.html
@@ -6,16 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="style.css">
-    <title>Data Editor</title>
+    <title>Obbylist - Data Editor</title>
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2277894072143897"
         crossorigin="anonymous"></script>
     <meta name="author" content="bypassing1">
     <meta property="og:title" content="List editor">
     <meta property="og:description"
         content="List editor, self explanatory.">
-    <meta property="og:url" content="https://bypassing1.github.io/The-Obbyist-List/voc-list.html">
-    <meta property="og:image" id="og-image"
-        content="https://cdn.discordapp.com/attachments/1246327728588849162/1251096242075860992/image.png?ex=666d55ac&is=666c042c&hm=1673e30fb92b931a8db05c2793e8c374acdfc3acea0928abc6aff203b0d87349&">
+        <meta property="og:url" content="https://obbylist.vercel.app" />
+        <meta property="og:image" id="og-image"
+        content="https://cdn.discordapp.com/attachments/876171286282383450/1359508743586320495/image.png?ex=67f7bcae&is=67f66b2e&hm=c3f98fb8af7c7b8e9094b87da1a09502c1e12e5c863f97ca3b9ebb3bb3616b67&">
     <meta property="og:type" content="website">
 </head>
 
