--- a/public/universal-list.html
+++ b/public/universal-list.html
@@ -6,16 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="style.css">
-    <title>Universal List</title>
+    <title>Obbylist - Universal List</title>
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2277894072143897"
         crossorigin="anonymous"></script>
     <meta name="author" content="bypassing1">
     <meta property="og:title" content="Universal List">
     <meta property="og:description"
         content="The Universal list, which ranges from top #1 to #100 from each country that is featured in the obbyist list...">
-    <meta property="og:url" content="https://bypassing1.github.io/The-Obbyist-List/universal-list.html">
-    <meta property="og:image" id="og-image"
-        content="https://cdn.discordapp.com/attachments/1246327728588849162/1251095749547261992/image.png?ex=666d5536&is=666c03b6&hm=d70e900affc0eb9801a2bf52de05da0a9f7fa760c71cce17e3566bb63be724c1&">
+        <meta property="og:url" content="https://obbylist.vercel.app" />
+        <meta property="og:image" id="og-image"
+        content="https://cdn.discordapp.com/attachments/876171286282383450/1359508004625449051/image.png?ex=67f7bbfe&is=67f66a7e&hm=27af879fddd6b93ffbf632a70e8f4606f2ee96fd9f10d7eb8f8c616fa6a7d732&">
     <meta property="og:type" content="website">
 </head>
 
@@ -28,9 +28,9 @@
             </div>
             <div class="nav-group">
                 <div class="nav" id="home">
-                    <a href="index">
-                        <img src="assets/home.svg" class="flag-icon">
-                        <h3 class="nav-title">Home</h3>
+                    <a href="dashboard">
+                        <img src="assets/dashboard.svg" class="flag-icon">
+                        <h3 class="nav-title">Dashboard</h3>
                     </a>
                 </div>
                 <div class="dropdown">
