--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -223,7 +223,7 @@
     </script>
     <script>
         document.addEventListener('DOMContentLoaded', function () {
-            // const loggedInUser = localStorage.getItem('loggedInUser');
+            const loggedInUser = localStorage.getItem('loggedInUser');
             if (!loggedInUser) {
                 window.location.href = '/account';
             } else {
