--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -333,7 +333,7 @@
                     case 'Obbies Completed':
                     valueElement.textContent = currentPlayer.beaten.length;
                     break;
-                    case 'Obbies Verified':
+                    case 'Obbies Verified in global list':
                     valueElement.textContent = obbiesVerified;
                     break;
                     case 'Global Ranking':
