loader and dropdown.

--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="style.css" />
 </head>
 <body style="background-color: #121212; background-image: none;">
+    <div class="loader"></div>
     <header>
         <div class="nav-container">
             <div class="info-text">
@@ -588,6 +589,7 @@
         
     </script>
     <script src="script/animation.js"></script>
-    <script src=""></script>
+    <script src="script/loader.js"></script>
+    <script src="script/dropdown.js"></script>
 </body>
 </html>
