player stats changed to leaderboard

--- a/public/universal-list.html
+++ b/public/universal-list.html
@@ -48,9 +48,9 @@
                     </div>
                 </div>
                 <div class="nav">
-                    <a href="statistics" target="_blank">
+                    <a href="leaderboard">
                         <img src="assets/stats.svg" class="flag-icon" />
-                        <h3 class="nav-title">Player Stats</h3>
+                        <h3 class="nav-title">Leaderboard</h3>
                     </a>
                 </div>
             </div>
