--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -36,9 +36,9 @@
                     </div>
                 </div>
                 <div class="nav">
-                    <a href="dashboard">
+                    <a href="leaderboard">
                         <img src="assets/stats.svg" class="flag-icon" />
-                        <h3 class="nav-title">Player Stats</h3>
+                        <h3 class="nav-title">Leaderboard</h3>
                     </a>
                 </div>
             </div>
