--- a/public/account.html
+++ b/public/account.html
@@ -147,7 +147,7 @@
                     <p class="account-popup-message">
                         To complete your registration, join the verification game.
                         <br><br>
-                        This helps us verify you're a real person and protects our community.
+                        Also when there is error, keep waiting until the red texts dissappear.
                     </p>
                     <a href="https://www.roblox.com/games/110702083826441/Verification" target="_blank" class="account-popup-button">
                         Join Verification Game
